# bethe-bloch-geant4-validation

./: .gitignore  LICENSE  Orden de la Bibliografia Zotero Bethe-Bloch.txt  README.es.md  README.md
geant4/: CMakeLists.txt  README.md  slab.cc
geant4/include/: ActionInitialization.hh  AnalysisDefs.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
geant4/macros/: bragg_kleeman_materials.py  energy_scan.mac  generate_energy_scan.py  run.mac  run_point.mac  vis.mac
geant4/macros/run_scan/: run_0p0015MeV.mac  run_0p001MeV.mac  run_0p0025MeV.mac  run_0p002MeV.mac  run_0p003MeV.mac  run_0p004MeV.mac  run_0p005MeV.mac  run_0p006MeV.mac  run_0p007MeV.mac  run_0p008MeV.mac  run_0p009MeV.mac  run_0p0125MeV.mac  run_0p015MeV.mac  run_0p0175MeV.mac  run_0p01MeV.mac  run_0p0225MeV.mac  run_0p025MeV.mac  run_0p0275MeV.mac  run_0p02MeV.mac  run_0p035MeV.mac  run_0p03MeV.mac  run_0p045MeV.mac  run_0p04MeV.mac  run_0p055MeV.mac  run_0p05MeV.mac  run_0p065MeV.mac  run_0p06MeV.mac  run_0p075MeV.mac  run_0p07MeV.mac  run_0p085MeV.mac  run_0p08MeV.mac  run_0p095MeV.mac  run_0p09MeV.mac  run_0p125MeV.mac  run_0p15MeV.mac  run_0p175MeV.mac  run_0p1MeV.mac  run_0p225MeV.mac  run_0p25MeV.mac  run_0p275MeV.mac  (+92 more)
geant4/root_analysis/: analyze_dedx.C
geant4/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
matlab/analytic/: README.md  betheBlochBetaGamma.m  betheBlochConstants.m  betheBlochDeltaZA.m  betheBlochEnergyGrid.m  betheBlochLinearStoppingPower.m  betheBlochMassStoppingPower.m  betheBlochMaterials.m  betheBlochPartialDerivatives.m  betheBlochPropagateLinearUncertainty.m  betheBlochPropagateMassUncertainty.m  betheBlochValidityCheck.m  betheBlochWaterComposition.m  generateCurves.m  generateCurvesWithUncertainty.m  sanityCheck.m  testBetheBloch.m  testBetheBlochUncertainty.m
nist_data/: energy_grid.csv  methodology_pstar_en.md  methodology_pstar_es.md  pstar_all_materials.csv  pstar_aluminum.csv  pstar_copper.csv  pstar_download_summary.csv  pstar_lead.csv  pstar_water.csv
python/analytic/: analytic_solution.ipynb
